--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">BolsaDeTrabajoFrontEnd</string>
     <string name="title_activity_main">BolsaDeTrabajoFrontEnd</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.bolsadetrabajo.c11027_c27130_c13258</string>
+    <string name="custom_url_scheme">com.bolsadetrabajo.c11027_c27130_c13258</string>
 </resources>
